Revision history for Perl extension MooseX-Getopt

0.13 Unreleased
    * MooseX::Getopt
      - Commandline option shouldn't be required in the
        case that the given "required" attribute has
        been loaded from config (MooseX::ConfigFromFile)

0.12 Fri. March 14, 2008
    ~~ updated copyright dates ~~

    - upped the Moose dependency to support
      the custom metaclass traits
    - added Getopt::Long::Descriptive as an
      optional dependency

    * MooseX::Getopt
      MooseX::Getopt::Meta::Attribute
      MooseX::Getopt::Meta::Attribute::Trait
      MooseX::Getopt::Meta::Attribute::NoGetopt
      MooseX::Getopt::Meta::Attribute::Trait::NoGetopt
      - added support for custom metaclass traits
        - added tests for this

0.11 Sun. Jan. 27, 2008
    * MooseX::Getopt
      - Commandline option shouldn't be required in the
        case that the given "required" attribute has
        a default or a builder method.

0.10 Wed. Jan. 23, 2008
    * MooseX::Getopt
      - Support default configfile attribute when
        used with MooseX::ConfigFromFile-based roles

0.09 Tues. Jan. 22, 2008
    * MooseX::Getopt
      - Use Getopt::Long::Descriptive if it's available

0.08 Tues. Dec. 8, 2007
    * MooseX::Getopt
      - Added support for configfile loading via
        MooseX::ConfigFromFile-based roles with
        the -configfile commandline option.

0.07 Tues. Dec. 4, 2007
    * MooseX::Getopt::Meta::Attribute::NoGetopt
      - fixed miscapitalization of NoGetopt in the docs

0.06 Fri. Nov. 23, 2007
    * MooseX::Getopt
      - refactored &new_with_option some so that
        this will work better with other Getopt
        modules (nuffin)

    + MooseX::Getopt::Strict
      - version of MooseX::Getopt which requires
        you to specify which attributes you want
        processed explicity
        - added tests for this

    + MooseX::Getopt::Meta::Attribute::NoGetopt
      - a custom meta-attribute which can be