@@ -5,6 +5,8 @@ Revision history for Perl extension MooseX-Getopt
       - Commandline option shouldn't be required in the
         case that the given "required" attribute has
         been loaded from config (MooseX::ConfigFromFile)
+      - Support for MooseX::ConfigFromFile shouldn't require
+	that role be added at the same level as Getopt.
 
 0.12 Fri. March 14, 2008
     ~~ updated copyright dates ~~
